<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/llSquareCiphers"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="#ADD8E6"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:textColor="#0F9D58"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:text="@string/cipher_type_square"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnPlayfair"
            android:textSize="32sp"
            android:text="@string/btn_playfair_cipher"
            android:textColor="#0F9D58"
            android:layout_margin="8dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btnTwoSquare"
            android:textSize="32sp"
            android:text="@string/btn_two_square"
            android:textColor="#0F9D58"
            android:layout_margin="8dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btnFourSquare"
            android:textSize="32sp"
            android:text="@string/btn_four_square"
            android:textColor="#0F9D58"
            android:layout_margin="8dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>