<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ADD8E6"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tvSubstitution"
        android:layout_marginTop="32sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/cipher_type_substitution"
        android:textSize="32sp"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/etInputTxt"
        android:layout_margin="16sp"
        app:layout_constraintTop_toBottomOf="@id/tvSubstitution"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/et_text_to_encode"
        android:textSize="24sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tvConvertedText"
        android:layout_margin="16sp"
        app:layout_constraintTop_toBottomOf="@id/etInputTxt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="24sp"
        android:text="@string/tv_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/llKey"
        app:layout_constraintTop_toBottomOf="@id/tvConvertedText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="16sp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvKeyLabel"
            android:layout_margin="16sp"
            android:textSize="24sp"
            android:text="@string/tv_key"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/etKeyInput"
            android:layout_margin="16sp"
            android:text="@string/et_key_text"
            android:textSize="24sp"
            android:layout_width="0dp"
            android:layout_weight="5"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llEncodeDecod"
        app:layout_constraintTop_toBottomOf="@id/llKey"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_margin="16sp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvEncode"
            android:layout_margin="16sp"
            android:textSize="24sp"
            android:text="@string/radio_button_encode"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:id="@+id/rbEncode"
            android:enabled="true"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tvDecode"
            android:layout_margin="16sp"
            android:textSize="24sp"
            android:text="@string/radio_button_encode"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:id="@+id/rbDecode"
            android:enabled="false"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnRun"
        android:textSize="32sp"
        android:text="@string/btn_run"
        android:textColor="#0F9D58"
        android:layout_margin="8dp"
        android:layout_gravity="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>