<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/llTranspositionCiphers"
    android:orientation="vertical"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="32sp"
        android:textColor="#0F9D58"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:text="@string/cipher_type_transposition"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnColumnar"
            android:textSize="32sp"
            android:text="@string/btn_columnar_cipher"
            android:textColor="#0F9D58"
            android:layout_margin="8dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/btnRailFence"
            android:textSize="32sp"
            android:text="@string/btn_rail_fence"
            android:textColor="#0F9D58"
            android:layout_margin="8dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>