<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:foregroundGravity="center_vertical">

        <!-- child view -->
        <LinearLayout
            android:id="@+id/listOfCiphers"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:foregroundGravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/listOfSubstitutionCiphers"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:padding="15dp"
                    android:text="@string/cipher_type_substitution"
                    android:textColor="#0F9D58"
                    android:textSize="70sp"
                />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/listOfTranspositionCiphers"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:padding="15dp"
                    android:text="@string/cipher_type_transposition"
                    android:textColor="#0F9D58"
                    android:textSize="70sp"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/listOfSquareCiphers"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:padding="15dp"
                    android:text="@string/cipher_type_square"
                    android:textColor="#0F9D58"
                    android:textSize="70sp"
                    />
            </LinearLayout>

        </LinearLayout>
    </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>